<resources>
    <string name="app_name">Community Reporting and Response</string>
    <string name="non_emergency">Community Reporting and Response</string>
    <string name="action_settings">Settings</string>
    <string name="community">Community</string>
    <string name="reporting_and_response">Reporting and Response</string>
    <string name="reporting_form">Reporting Form</string>
    <string name="return_to_reporting">Return to Reporting</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="employee_login">Employee Login</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="continue_to_reporting">Continue to Reporting</string>
    <string name="report_details">Report Details</string>
    <string name="submit_report">Submit Report</string>
    <string name="take_picture">Take Picture</string>
    <string name="category">Category:</string>
    <string name="category_description">Category Description:</string>
    <string name="building">Building:</string>
    <string name="floor_number">Floor Number:</string>
    <string name="description">Description:</string>
    <string name="search">Search:</string>
    <string name="close_selected_task">Close Selected Task</string>
    <string name="floor">Floor:</string>
    <string name="date_opened">Date Opened:</string>
</resources>
