<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReportActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        tools:layout_absoluteX="0dp"
        tools:layout_absoluteY="0dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/report_details"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginTop="5sp"
            android:layout_marginBottom="8sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="5sp"
            android:layout_marginLeft="2sp"
            android:layout_marginRight="2sp">

            <LinearLayout
                android:layout_width="100sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/category"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:layout_marginTop="5sp"
                    android:layout_marginBottom="10sp"/>

                <Spinner
                    android:id="@+id/cat_spn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:popupBackground="@color/iron"
                    android:layout_marginLeft="5sp"
                    android:layout_marginRight="5sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="100sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/category_description"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:layout_marginTop="5sp"
                    android:layout_marginBottom="10sp"/>

                <TextView
                    android:id="@+id/cat_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_marginLeft="5sp"
                    android:layout_marginRight="5sp"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="5sp">

            <LinearLayout
                android:layout_width="100sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/building"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:layout_marginTop="5sp"
                    android:layout_marginBottom="10sp"/>

                <Spinner
                    android:id="@+id/build_spn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5sp"
                    android:layout_marginRight="5sp"
                    android:popupBackground="@color/iron"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="100sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/floor_number"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:layout_marginTop="5sp"
                    android:layout_marginBottom="10sp"/>

                <Spinner
                    android:id="@+id/floor_spn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:popupBackground="@color/iron"
                    android:layout_marginLeft="5sp"
                    android:layout_marginRight="5sp" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textColor="@color/black"
            android:layout_marginLeft="2sp"
            android:layout_marginRight="2sp"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/desc_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textMultiLine"
            android:layout_marginTop="5sp"
            android:layout_marginBottom="8sp"
            android:layout_marginLeft="2sp"
            android:layout_marginRight="2sp"/>

        <Button
            android:id="@+id/image_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/take_picture"
            android:layout_marginLeft="2sp"
            android:layout_marginRight="2sp"/>

        <ImageView
            android:id="@+id/imageHolder"
            android:layout_width="150sp"
            android:layout_height="150sp"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="10sp"/>

        <Button
            android:id="@+id/submit_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit_report"
            android:layout_marginLeft="2sp"
            android:layout_marginRight="2sp"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>